@@ -4,14 +4,19 @@ import br.com.findpark.dtos.estacionamentos.VagaComEstacionamentoDto;
 import br.com.findpark.entities.Estacionamento;
 import br.com.findpark.entities.Vaga;
 import br.com.findpark.entities.enums.vagas.StatusVaga;
+import br.com.findpark.exceptions.RequisicaoInvalidaException;
 import br.com.findpark.exceptions.usuario.RecursoNaoEncontradoException;
 import br.com.findpark.repositories.EstacionamentoRepository;
 import br.com.findpark.repositories.VagaRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.text.Normalizer;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class VagaService {
@@ -23,6 +28,15 @@ public class VagaService {
     private EstacionamentoRepository estacionamentoRepository;
 
     public Vaga criar(Vaga vaga) {
+        Estacionamento estacionamento = estacionamentoRepository.findById(vaga.getEstacionamentoId())
+                .orElseThrow(() -> new RecursoNaoEncontradoException("Estacionamento não encontrado com id " + vaga.getEstacionamentoId()));
+
+        long totalVagas = vagaRepository.countByEstacionamentoId(estacionamento.getId());
+
+        if (totalVagas >= estacionamento.getCapacidade()) {
+            throw new RequisicaoInvalidaException("Número máximo de vagas atingido para este estacionamento.");
+        }
+
         return vagaRepository.save(vaga);
     }
 
@@ -31,22 +45,22 @@ public class VagaService {
                 .orElseThrow(() -> new RecursoNaoEncontradoException("Vaga não encontrada com id " + id));
     }
 
-    public List<Vaga> buscarTodas() {
-        return vagaRepository.findAll();
+    public Page<Vaga> buscarTodas(Pageable pageable) {
+        return vagaRepository.findAll(pageable);
     }
 
-    public List<Vaga> buscarPorEstacionamento(String estacionamentoId) {
-        return vagaRepository.findByEstacionamentoId(estacionamentoId);
+    public Page<Vaga> buscarPorEstacionamento(String estacionamentoId, Pageable pageable) {
+        return vagaRepository.findByEstacionamentoId(estacionamentoId, pageable);
     }
 
-    public List<Vaga> buscarPorEstacionamentoEStatus(String estacionamentoId, StatusVaga status) {
-        return vagaRepository.findByEstacionamentoIdAndStatus(estacionamentoId, status);
+    public Page<Vaga> buscarPorEstacionamentoEStatus(String estacionamentoId, StatusVaga status, Pageable pageable) {
+        return vagaRepository.findByEstacionamentoIdAndStatus(estacionamentoId, status, pageable);
     }
 
-    public List<VagaComEstacionamentoDto> buscarVagasComEstacionamento() {
-        List<Vaga> vagas = vagaRepository.findByStatus(StatusVaga.LIVRE);
+    public Page<VagaComEstacionamentoDto> buscarVagasComEstacionamento(Pageable pageable) {
+        Page<Vaga> vagas = vagaRepository.findByStatus(StatusVaga.LIVRE, pageable);
 
-        return vagas.stream().map(vaga -> {
+        return vagas.map(vaga -> {
             Estacionamento estacionamento = estacionamentoRepository.findById(vaga.getEstacionamentoId())
                     .orElseThrow(() -> new RecursoNaoEncontradoException("Estacionamento não encontrado"));
             return new VagaComEstacionamentoDto(
@@ -56,13 +70,17 @@ public class VagaService {
                     vaga.getPreco(),
                     estacionamento
             );
-        }).toList();
+        });
     }
 
-    public List<Vaga> buscarPorTermo(String termo) {
+    public Page<VagaComEstacionamentoDto> buscarPorTermo(String termo, Pageable pageable) {
         String termoNormalizado = normalize(termo);
 
-        return vagaRepository.findAll().stream()
+        // Buscando todas as vagas paginadas
+        Page<Vaga> vagasPage = vagaRepository.findAll(pageable);
+
+        // Filtrando as vagas após carregar os dados
+        List<Vaga> filteredVagas = vagasPage.stream()
                 .filter(vaga -> {
                     Estacionamento est = estacionamentoRepository.findById(vaga.getEstacionamentoId()).orElse(null);
                     if (est == null) return false;
@@ -72,17 +90,30 @@ public class VagaService {
                     String bairro = normalize(est.getEndereco().getBairro());
                     String estado = normalize(est.getEndereco().getUf());
 
+                    // Verificando se algum dos campos do estacionamento contém o termo pesquisado
                     return nome.contains(termoNormalizado)
                             || cidade.contains(termoNormalizado)
                             || bairro.contains(termoNormalizado)
                             || estado.contains(termoNormalizado);
                 })
-                .peek(vaga -> {
-                    // atribui o estacionamento para a vaga
+                .collect(Collectors.toList());
+
+        // Mapear as Vagas para VagaComEstacionamentoDto
+        List<VagaComEstacionamentoDto> vagaDtos = filteredVagas.stream()
+                .map(vaga -> {
                     Estacionamento est = estacionamentoRepository.findById(vaga.getEstacionamentoId()).orElse(null);
-                    vaga.setEstacionamento(est);
+                    return new VagaComEstacionamentoDto(
+                            vaga.getId(),
+                            vaga.getStatus(),
+                            vaga.getTipo(),
+                            vaga.getPreco(),
+                            est
+                    );
                 })
-                .toList();
+                .collect(Collectors.toList());
+
+        // Criando um novo Page<VagaComEstacionamentoDto>
+        return new PageImpl<>(vagaDtos, pageable, vagasPage.getTotalElements());
     }
 
     private String normalize(String s) {
